# code_olymp

./: .gitignore  README.md
C++/: MinGW.cpp  aero.cpp  bat.cpp  winxp.cpp  ЗАПУСТИ.cpp  Захар.cpp  Как востановить справедливость.cpp  не открывать.cpp
C++/files/: file.cpp  file1.txt  file2.cpp  input.txt  output.txt  pert.cpp  read.cpp  zadach1.cpp
C++/for/: 2.cpp  5.cpp  russian.cpp  yt2.cpp
C++/graf/: dom.cpp  flag.cpp  frog.cpp  krug.cpp  line.cpp  simple.cpp
C++/if/: ghj uhb,s.cpp  больной.cpp  делитель.cpp  оля каты.cpp  про работу.cpp  про сахар.cpp  сдача.cpp  чётность.cpp
C++/olimp/: Безымянный1.cpp  Безымянный2.cpp
C++/v6oid/: 1..cpp
C++/while/: оценка.cpp  ср.cpp  число.cpp
C++/линейные/: PROJECT_1.cpp  primer3.cpp  Линолиум.cpp  Обои.cpp  Подоходный налог.cpp  Функция.cpp  Чаевые.cpp  задание 1.cpp  задание 2.cpp  задание про бревно.cpp  задача 3.cpp  задача 4.cpp  задача про видеоигру сам ракет спутников.cpp  задача про зарплату.cpp  задача про площадь треугольника.cpp  площадь окружности и длина.cpp  футы.cpp  числа.cpp
C++/перебор/: 1.cpp  2.cpp  3.cpp  4.cpp
C++/планеты/: земля.cpp
C++/поиск_ошибок/: err.cpp
C++/строки/: 1.cpp  2.cpp  Str.cpp  Strin.txt  Strout.txt  TEXT.txt  cnb[.cpp  ege.cpp  pass.cpp  polindrom.cpp
Pascal/03.11.16/: Program1.pas  Program10.pas  Program11.pas  Program12.pas  Program13.pas  (+5 more)
olymp2017/: 1.py  2.py  3.py  4.py
str/: 1.py  Program2.pas  Program3.pas  Program4.pas  Program5.pas  Program6.pas
uts/uts_2017_aut_cpp/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  main.cpp
(+188 files in other folders)
